# rust-todo-app-axum

./: .env  Cargo.toml
migrations/: 202406192125_todos.sql  202406192126_users.sql
src/: lib.rs  routes.rs  server.rs
src/common/: error.rs  extractor.rs  middleware.rs  password_encoder.rs
src/infrastructure/: database.rs
src/user/: handlers.rs  repository.rs  routes.rs  service.rs  views.rs
